# parser-vacancyes

./: README.md  main.py  pyproject.toml
data/: data.json
src/: api.py  job_list.py  utils.py  vacancy.py
tests/: conftest.py  test_api.py  test_job_list.py  test_utils.py  test_vacancies.py
